--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/Hatisoft/koteky#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.36.0",
-    "use-plugin": "^0.3.1"
+    "electron-prebuilt": "^0.36.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "electron-plugins": "0.0.4"
   }
 }
