--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "koteky",
   "version": "0.1.0",
   "description": "crossplatform social network manager",
-  "main": "./src/main.js",
+  "main": "main.js",
   "scripts": {
-    "start": "electron ./src/main.js"
+    "start": "electron main.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "electron-plugins": "0.0.4",
+    "electron-updater": "^0.2.3",
     "electron-window": "^0.6.2"
   }
 }
