--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "bootstrap": "^3.3.6",
     "electron-plugins": "0.0.4",
     "electron-updater": "^0.2.3",
-    "electron-window": "^0.6.2"
+    "electron-window": "^0.6.2",
+    "vue": "^1.0.16"
+  },
+  "plugins": {
+    "electron-updater-sample-plugin": "~0.0.0"
   }
 }
