--- a/package.json
+++ b/package.json
@@ -4,7 +4,23 @@
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron main.js",
+    "test": "mocha",
+
+    "clean": "rm -rf ./release",
+    "gulp": "npm run clean && gulp",
+
+    "pack": "npm run gulp && npm run pack:win && npm run pack:darwin",
+    "pack:win": "electron-packager ./release/app electron-updater-sample --platform=win32 --arch=x64 --version=0.27.2 --out=./release/win32 --icon=assets/win/evolve.ico",
+    "pack:darwin": "electron-packager ./release/app electron-updater-sample --platform=darwin --arch=x64 --version=0.27.2 --out=./release/darwin --icon=assets/win/evolve.ico",
+
+    "build": "npm run pack && npm run build:win && npm run build:darwin",
+    "build:win": "electron-builder ./release/win32/electron-updater-sample-win32 --platform=win32 --config=config.json --out=./release/win32",
+    "build:darwin": "electron-builder ./release/darwin/electron-updater-sample.app --platform=darwin --config=config.json --out=./release/darwin",
+
+    "release": "npm run build && npm run release:win && npm run release:darwin",
+    "release:win": "mv './release/win32/electron-updater-sample Setup.exe' './release/win32/Setup-x64.exe'",
+    "release:darwin": "mv ./release/darwin/electron-updater-sample.dmg ./release/darwin/electron-updater-sample-x64.dmg"
   },
   "repository": {
     "type": "git",
@@ -20,16 +36,20 @@
   },
   "homepage": "https://github.com/Hatisoft/koteky#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.36.0"
+    "chai": "^2.3.0",
+    "electron-packager": "^4.1.2",
+    "electron-prebuilt": "^0.36.0",
+    "gulp": "^3.8.11",
+    "mocha": "^2.2.4",
+    "proxyquire": "^1.4.0",
+    "sinon": "^1.14.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "electron-plugins": "0.0.4",
-    "electron-updater": "^0.2.3",
-    "electron-window": "^0.6.2",
+    "electron-updater": "^0.2.x",
+    "electron-plugins": "^0.0.x",
     "vue": "^1.0.16"
   },
   "plugins": {
-    "electron-updater-sample-plugin": "~0.0.0"
   }
 }
