--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "bootstrap": "^3.3.6",
     "electron-plugins": "^0.0.x",
     "electron-updater": "^0.2.x",
+    "jquery": "^2.2.1",
     "vue": "^1.0.16"
   },
-  "plugins": {
-  }
+  "plugins": {}
 }
