--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron-plugins": "^0.0.x",
     "electron-updater": "^0.2.x",
     "jquery": "^2.2.1",
+    "menubar": "^4.0.2",
     "vue": "^1.0.16"
   },
   "plugins": {}
