--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-updater": "^0.2.x",
     "jquery": "^2.2.1",
     "menubar": "^4.0.2",
+    "simple-dom": "^0.3.0",
     "vue": "^1.0.16"
   },
   "plugins": {}
