--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "bootstrap": "^3.3.6",
     "electron-plugins": "^0.0.x",
     "electron-updater": "^0.2.x",
-    "jquery": "^2.2.1",
     "menubar": "^4.0.2",
-    "simple-dom": "^0.3.0",
-    "vue": "^1.0.16"
+    "vue": "^1.0.16",
+    "vue-strap": "^1.0.7"
   },
   "plugins": {}
 }
