--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "test": "mocha"
+    "test": "mocha test",
+
+    "clean": "rm -rf ./release",
+    "gulp": "npm run clean && gulp",
+
+    "pack": "npm run gulp && npm run pack:win && npm run pack:darwin",
+    "pack:win": "electron-packager ./release/app electron-updater-sample --platform=win32 --arch=x64 --version=0.27.2 --out=./release/win32 --icon=assets/win/evolve.ico",
+    "pack:darwin": "electron-packager ./release/app electron-updater-sample --platform=darwin --arch=x64 --version=0.27.2 --out=./release/darwin --icon=assets/win/evolve.ico",
+
+    "build": "npm run pack && npm run build:win && npm run build:darwin",
+    "build:win": "electron-builder ./release/win32/electron-updater-sample-win32 --platform=win32 --config=config.json --out=./release/win32",
+    "build:darwin": "electron-builder ./release/darwin/electron-updater-sample.app --platform=darwin --config=config.json --out=./release/darwin",
+
+    "release": "npm run build && npm run release:win && npm run release:darwin",
+    "release:win": "mv './release/win32/electron-updater-sample Setup.exe' './release/win32/Setup-x64.exe'",
+    "release:darwin": "mv ./release/darwin/electron-updater-sample.dmg ./release/darwin/electron-updater-sample-x64.dmg"
   },
   "repository": {
     "type": "git",
@@ -21,13 +36,15 @@
   },
   "homepage": "https://github.com/Hatisoft/koteky#readme",
   "devDependencies": {
-    "chai": "^2.3.0",
     "electron-packager": "^4.1.2",
     "electron-prebuilt": "^0.36.0",
     "gulp": "^3.8.11",
-    "mocha": "^2.2.4",
     "proxyquire": "^1.4.0",
-    "sinon": "^1.14.1"
+    "blanket": "^1.2.1",
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "koteky-lib": "^0.1.0",
