--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/Hatisoft/koteky#readme",
   "devDependencies": {
     "electron-packager": "^4.1.2",
-    "electron-prebuilt": "^0.36.0",
+    "electron-prebuilt": "^0.36.7",
     "gulp": "^3.8.11",
     "proxyquire": "^1.4.0",
     "blanket": "^1.2.1",
@@ -49,6 +49,7 @@
     "electron-updater": "^0.2.x",
     "jquery": "^2.2.1",
     "koteky-lib": "^0.1.0",
+    "ljson": "^2.0.0",
     "menubar": "^4.0.2",
     "vue": "^1.0.16"
   },
