--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koteky",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
@@ -54,5 +54,7 @@
     "menubar": "^4.0.2",
     "vue": "^1.0.16"
   },
-  "plugins": {}
+  "plugins": {
+      "koteky-twitter" : "^0.2.0"
+  }
 }
