--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "electron-plugins": "^0.1.x",
+    "electron-settings": "^1.0.4",
     "electron-stylus": "^0.1.1",
     "electron-updater": "^0.2.x",
     "jquery": "^2.2.1",
@@ -53,6 +54,6 @@
     "vue": "^1.0.16"
   },
   "plugins": {
-      "koteky-twitter" : "^0.2.0"
+    "koteky-twitter": "^0.2.0"
   }
 }
