--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koteky",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
@@ -55,6 +55,6 @@
     "vue": "^1.0.16"
   },
   "plugins": {
-    "koteky-twitter": "^0.4.3"
+    "koteky-twitter": "0.4.6"
   }
 }
