--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "jquery": "^2.2.1",
     "koteky-lib": "^0.2.1",
     "menubar": "^4.0.2",
+    "npm-keywordsearch": "^0.1.1",
+    "npm-package-info": "0.0.3",
     "vue": "^1.0.16"
   },
   "plugins": {
