--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "homepage": "https://github.com/Hatisoft/koteky#readme",
   "devDependencies": {
-    "electron-packager": "^4.1.2",
-    "electron-prebuilt": "^0.36.7",
+    "electron-packager": "^7.0.2",
+    "electron-prebuilt": "^1.1.3",
     "gulp": "^3.8.11",
     "proxyquire": "^1.4.0",
     "blanket": "^1.2.1",
@@ -45,10 +45,11 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "check-types": "^7.0.0",
+    "compare-version": "^0.1.2",
     "electron-plugins": "^0.1.x",
     "electron-settings": "^1.0.4",
     "electron-stylus": "^0.1.1",
-    "electron-updater": "^0.2.x",
+    "electron-updater": "^0.3.x",
     "jquery": "^2.2.1",
     "koteky-lib": "^0.2.1",
     "menubar": "^4.0.2",
