--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koteky",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/Hatisoft/koteky#readme",
   "devDependencies": {
     "electron-packager": "^7.0.2",
-    "electron-prebuilt": "^0.36.x",
+    "electron-prebuilt": "^1.2.0",
     "gulp": "^3.8.11",
     "proxyquire": "^1.4.0",
     "blanket": "^1.2.1",
@@ -59,6 +59,6 @@
     "vue": "^1.0.16"
   },
   "plugins": {
-    "koteky-twitter": "0.4.7"
+      "koteky-twitter": "0.4.7"
   }
 }
