--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "menubar": "^4.0.2",
     "npm-keywordsearch": "^0.1.1",
     "npm-package-info": "0.0.3",
+    "open": "0.0.5",
     "vue": "^1.0.16"
   },
   "plugins": {
-      "koteky-twitter": "0.4.7"
+    "koteky-twitter": "0.4.7"
   }
 }
