--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koteky",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
@@ -58,7 +58,8 @@
     "npm-keywordsearch": "^0.1.1",
     "npm-package-info": "0.0.3",
     "open": "0.0.5",
-    "vue": "^1.0.16"
+    "vue": "^1.0.16",
+    "vue-moment": "^1.0.7"
   },
   "plugins": {
     "koteky-twitter": "0.4.8"
