--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "test": "mocha test",
-    "dist": "build"
+    "dist": "build --publish=onTag"
   },
   "repository": {
     "type": "git",
