--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
   },
   "build": {
       "asar": false,
-      "compression": "maximum"
+      "compression": "maximum",
+      "osx": {
+          "target": "dmg"
+      }
   }
 }
