--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "koteky",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "test": "mocha test",
-    "dist": "build --publish onTagOrDraft"
+    "dist": "build --publish=onTag"
   },
   "repository": {
     "type": "git",
