--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koteky",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
@@ -56,6 +56,7 @@
     "npm-package-info": "0.0.3",
     "open": "0.0.5",
     "vue": "^1.0.16",
+    "vue-infinite-scroll": "^0.2.3",
     "vue-moment": "^1.0.7"
   },
   "plugins": {
