--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^3.3.6",
     "check-types": "^7.0.0",
     "compare-version": "^0.1.2",
+    "electron-cookies": "^1.1.0",
     "electron-plugins": "^0.1.x",
     "electron-settings": "^1.0.4",
     "electron-stylus": "^0.1.1",
