--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 -
     version: 0.4.{build}
     branches:
-        - /\d+\.\d+\.\d+/
+        only:
+            - /\d+\.\d+\.\d+/
     platform:
       - x64
     init:
