--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koteky",
-  "version": "0.3.12",
+  "version": "0.4.0",
   "description": "crossplatform social network manager",
   "main": "main.js",
   "scripts": {
@@ -61,7 +61,8 @@
     "vue-moment": "^1.0.7"
   },
   "plugins": {
-    "koteky-twitter": "0.5.4"
+    "koteky-twitter": "0.5.4",
+    "koteky-facebook": "0.1.0"
   },
   "build": {
     "asar": false,
