--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,7 @@
 -
     version: 0.4.{build}
-    branches:
-        only:
-            - /\d+\.\d+\.\d+/
+    skip_tags: true
+    skip_non_tags: false
     platform:
       - x64
     init:
@@ -18,10 +17,8 @@
     test: off
 -
     version: 0.4.{build}
-    branches:
-        only:
-            - master
-    skip_tags: true
+    skip_tags: false
+    skip_non_tags: true
     platform:
       - x64
     init:
